# srs

./: .env.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
app/knowledge_sources/: notion.py
app/knowledge_sources/notion/: notion_service.py  schemas.py
app/routers/: config.py  dashboard.py
app/services/: config_service.py  dashboard_service.py  flashcard_service.py  knowledge_service.py
app/telegram_bot/: handlers.py  main.py  run.py
templates/: config.html  dashboard.html
templates/static/: main.css
tests/: conftest.py
tests/knowledge_sources/notion/: test_notion_service.py
