[project]
name = "srs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "isort>=6.0.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest-asyncio>=0.26.0",
    "python-telegram-bot>=22.0",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
]
