[project]
name = "srs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "isort>=6.0.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest-asyncio>=0.26.0",
    "python-telegram-bot>=22.0", # Added telegram bot library
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
    "uvicorn[standard]>=0.34.2",
    "python-dotenv>=1.0.1", # Useful for local dev
    "httpx>=0.27.0", # Needed for Notion/OpenRouter clients
    "openai>=1.30.1", # For OpenRouter
    "jinja2>=3.1.4", # For FastAPI templates
    "alembic>=1.13.1", # For database migrations (recommended)
    "pytest>=8.3.5",
    "dotenv>=0.9.9",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "UP", "PL", "T20"] # Added I for isort, T20 for print
ignore = ["E501", "PLR0913", "E402", "F401"] # Ignore line length errors, handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
